brat/test/golden/error/pass.brat.golden
Error in test/golden/error/pass.brat@5:12-13
f = { .., (x => x) }
           ^

  Nothing to bind to: x

